# kasif

./: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc.cjs  index.html  license  package.json  pnpm-lock.yaml  readme.md  tsconfig.json  vite.config.ts
.github/workflows/: lint.yml
public/apps/svelte/: entry.js  entry.js.map  package.json  style.css
public/apps/test/: entry.js.map
public/plugins/another/: entry.js  entry.js.map
public/plugins/test/: entry.js
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/apps/plugin/: entry.js  entry.js.map
src/components/Compound/: Auth.tsx  ContextMenu.tsx  InputPrompt.tsx  NoNetwork.tsx  Permission.tsx  PluginCard.tsx  Prompt.tsx
src/components/Navigation/: Footer.tsx  Header.tsx  Navbar.tsx  index.ts
src/components/Overlay/: ContextMenu.tsx  Spotlight.tsx
src/config/: app.ts  backend.ts  command.ts  contextmenu.ts  dnd.tsx  i18n.ts  navbar.tsx  permission.ts  settings.tsx  toolbar.tsx  view.tsx
src/managers/: auth.ts  base.ts  command.ts  content.ts  contextmenu.ts  dnd.ts  i18n.ts  navbar.ts  network.ts  notification.ts  pane.ts  permission.ts  plugin.ts  prompt.ts  settings.ts  theme.ts  view.ts
src/pages/: Layout.tsx  LogsPage.tsx  PermissionsPage.tsx  PluginsPage.tsx  ProfilePage.tsx  SettingsPage.tsx  StorePage.tsx  WelcomePage.tsx
src/util/: capture-react.ts  cinq-react.ts  decorators.ts  environment.ts  icon.ts  icons.json  misc.ts  node-renderer.ts  pane.ts  remote.ts  tauri.ts  watch.ts
(+16 files in other folders)
